--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "formik": "^2.2.9",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-sqlite-storage": "^6.0.1",
